# OPIUM

./: .gitmodules  .vimrc  CMakeLists.txt  README.md  TODO.txt  bench.opi  doctor.opi  env.sh  itertools.opi  main.c  opium.pc  siphash.diff  test.opi
base/: base  base.c  base.opi
include/opium/: hash-map.h  lambda.h  opium.h  utility.h
libs/base/: base.c  base.opi  common.opi  list-base.opi
src/: allocators.c  analyse.c  ast.c  bc.c  builtins.c  context.c  emit.c  gc.c  hash-map.c  ir.c  jit.c  lambda.c  opium.c  recscp.c  utility.c  vm.c
src/syntax/: lexer.l  parser.y
vim/indent/: opium.vim
vim/syntax/: opium.vim
